--- a/code/dev/parts/layout.html
+++ b/code/dev/parts/layout.html
@@ -234,7 +234,7 @@
                             </div>
                             <div style="display: inline-block">
                                 <div id="menuToggleBtn" class="menu-toggle">
-                                    <span menu-toggle="toggleMenu" ng-click="toggleMenu = !toggleMenu" class="glyphicon glyphicon-menu-hamburger" tooltip="{{(toggleMenu ? 'Show' : 'Hide') + ' Menu'}}" tooltip-placement="right"></span>
+                                    <span menu-toggle="toggleMenu" ng-click="toggleMenu = !toggleMenu" class="glyphicon glyphicon-menu-hamburger" uib-tooltip="{{(toggleMenu ? 'Show' : 'Hide') + ' Menu'}}" tooltip-placement="right"></span>
                                 </div>
                             </div>
                             <search></search>
