--- a/code/parts/domains/list.html
+++ b/code/parts/domains/list.html
@@ -115,7 +115,7 @@
             <tbody>
               <tr id="anchor{{::$index}}" ng-click="saveAnchorScrollIndex($index)" ng-repeat="item in filteredRecords | limitTo:filter.limit:filter.skip track by $index">
                 <td>
-                  <a ui-sref=".edit({id: item.id})" ng-if="!item.loading" tooltip="Edit Domain">
+                  <a ui-sref=".edit({id: item.id})" ng-if="!item.loading" uib-tooltip="Edit Domain">
                   {{item.domain_name}}
                 </a>
                 </td>
@@ -126,22 +126,22 @@
                 </td>
                 <td class="actions">
                   <i class="glyphicon glyphicon-refresh spin" ng-if="item.loading"></i>
-                  <a ui-sref=".edit({id: item.id})" ng-if="!item.loading" tooltip="Edit Domain">
+                  <a ui-sref=".edit({id: item.id})" ng-if="!item.loading" uib-tooltip="Edit Domain">
                     <i class="glyphicon glyphicon-pencil"></i>
                   </a>
-                  <!-- <a ui-sref=".advanced({id: item.id})" ng-if="!item.loading" tooltip="Advanced Edit Domain">
+                  <!-- <a ui-sref=".advanced({id: item.id})" ng-if="!item.loading" uib-tooltip="Advanced Edit Domain">
                     <i class="glyphicon glyphicon-cog"></i>
                   </a> -->
-                  <a ui-sref=".edit({id: item.id,isAdvanced:true})" ng-if="!item.loading" tooltip="Advanced Edit Domain">
+                  <a ui-sref=".edit({id: item.id,isAdvanced:true})" ng-if="!item.loading" uib-tooltip="Advanced Edit Domain">
                     <i class="glyphicon glyphicon-cog"></i>
                   </a>
-                  <a href="" ng-if="!item.loading" ng-click="deleteDomain(item)" tooltip="Delete Domain">
+                  <a href="" ng-if="!item.loading" ng-click="deleteDomain(item)" uib-tooltip="Delete Domain">
                     <i class="glyphicon glyphicon-trash"></i>
                   </a>
-                  <a href="#/reports/proxy" ng-if="!item.loading" ng-click="storeToStorage(item)" tooltip="Stats">
+                  <a href="#/reports/proxy" ng-if="!item.loading" ng-click="storeToStorage(item)" uib-tooltip="Stats">
                     <i class="glyphicon glyphicon-stats"></i>
                   </a>
-                  <a ui-sref=".versions({id: item.id})" ng-if="!item.loading" tooltip="Previous Versions">
+                  <a ui-sref=".versions({id: item.id})" ng-if="!item.loading" uib-tooltip="Previous Versions">
                     <i class="glyphicon glyphicon-book"></i>
                   </a>
                 </td>
