--- a/code/parts/keys/list.html
+++ b/code/parts/keys/list.html
@@ -78,28 +78,28 @@
             <tbody>
               <tr ng-repeat="item in filteredRecords | limitTo:filter.limit:filter.skip track by $index">
                 <td>
-                  <a ui-sref="index.accountSettings.keys.edit({id: item.id})" ng-if="!item.loading" tooltip="Edit API Key">
+                  <a ui-sref="index.accountSettings.keys.edit({id: item.id})" ng-if="!item.loading" uib-tooltip="Edit API Key">
                   {{item.key_name}}
                 </a>
                 </td>
                 <td>
-                  <button class="btn btn-primary" clipboard text="item.key" on-copied="copyCallback()" on-error="copyCallback(err)" style="vertical-align: initial;" tooltip="Click to copy the key to the clipboard" tooltip-placement="top"><i class="fa fa-files-o"></i></button>
+                  <button class="btn btn-primary" clipboard text="item.key" on-copied="copyCallback()" on-error="copyCallback(err)" style="vertical-align: initial;" uib-tooltip="Click to copy the key to the clipboard" tooltip-placement="top"><i class="fa fa-files-o"></i></button>
                   <button class="btn btn-primary" ng-click="switchKeyVisibility(item)" ng-hide="item.showKey" style="vertical-align: initial;">Show API Key</button>
                   <input ng-if="item.showKey" ng-blur="switchKeyVisibility(item)" class="form-control" value="{{item.key}}" style="width: 300px; display: inline-block; position: absolute; z-index: 999; margin-left: 4px;" focus-me="item.showKey">
                 </td>
                 <td>{{ getRelativeDate(item.updated_at) }}</td>
                 <!--<td>-->
-                <!--<i class="glyphicon pointer" tooltip="Toggle active status" ng-hide="item.loading" ng-click="toggleProperty(item, 'read_only_status')" ng-class="item.read_only_status && 'glyphicon-check' || 'glyphicon-unchecked'"></i>-->
+                <!--<i class="glyphicon pointer" uib-tooltip="Toggle active status" ng-hide="item.loading" ng-click="toggleProperty(item, 'read_only_status')" ng-class="item.read_only_status && 'glyphicon-check' || 'glyphicon-unchecked'"></i>-->
                 <!--</td>-->
                 <!--<td>-->
-                <!--<i class="glyphicon pointer" tooltip="Toggle active status" ng-hide="item.loading" ng-click="toggleProperty(item, 'active')" ng-class="item.active && 'glyphicon-check' || 'glyphicon-unchecked'"></i>-->
+                <!--<i class="glyphicon pointer" uib-tooltip="Toggle active status" ng-hide="item.loading" ng-click="toggleProperty(item, 'active')" ng-class="item.active && 'glyphicon-check' || 'glyphicon-unchecked'"></i>-->
                 <!--</td>-->
                 <td class="actions">
                   <i class="glyphicon glyphicon-refresh spin" ng-if="item.loading"></i>
-                  <a ui-sref="index.accountSettings.keys.edit({id: item.id})" ng-if="!item.loading" tooltip="Edit API Key">
+                  <a ui-sref="index.accountSettings.keys.edit({id: item.id})" ng-if="!item.loading" uib-tooltip="Edit API Key">
                     <i class="glyphicon glyphicon-pencil"></i>
                   </a>
-                  <a href="" ng-if="!item.loading" ng-click="deleteKey(item)" tooltip="Delete API Key">
+                  <a href="" ng-if="!item.loading" ng-click="deleteKey(item)" uib-tooltip="Delete API Key">
                     <i class="glyphicon glyphicon-trash"></i>
                   </a>
                 </td>
