--- a/code/dev/parts/signup/verify.html
+++ b/code/dev/parts/signup/verify.html
@@ -30,7 +30,7 @@
           <div class="row" ng-switch-when="verify-token-success">
             <div class="col-md-12">
               <div class="pull-left">
-                <h1>Thank you for verification of your email address!</h1>
+                <h1>Thank you for verifying your email address!</h1>
               </div>
             </div>
           </div>
