--- a/code/parts/keys/edit.html
+++ b/code/parts/keys/edit.html
@@ -54,15 +54,11 @@
           <div class="form-group" ng-hide="!companies || companies.length == 1">
             <label for="account_id"
                    class="col-sm-2 control-label">Account</label>
-
             <div class="col-sm-4">
-              <ui-select id="account_id"
-                         ng-disabled="_loading"
-                         ng-model="key.account_id"
-                         style="width: 100%;">
+               <ui-select ng-model="key.account_id" theme="select2" ng-disabled="_loading" on-select="onAccountSelect($model)" style="min-width: 550px;" id="account_id" name="accountId">
                 <ui-select-match placeholder="Select Account">{{$select.selected.companyName}}</ui-select-match>
                 <ui-select-choices repeat="item.id as item in companies | filter: {companyName: $select.search}">
-                  <small>{{item.companyName}}</small>
+                  <div ng-bind-html="item.companyName|highlight: $select.search"></div>
                 </ui-select-choices>
               </ui-select>
             </div>
