--- a/code/dev/parts/apps/edit.html
+++ b/code/dev/parts/apps/edit.html
@@ -56,7 +56,7 @@
             </div>
           </div>
           <div class="form-group" ng-if="auth.isReseller() || auth.isRevadmin()">
-            <label for="account_id" popover-append-to-body="{{true}}" class="col-sm-2 control-label" popover-trigger="mouseenter" uib-popover="Select company name the application name should be associated with">Company</label>
+            <label for="account_id" popover-append-to-body="{{true}}" class="col-sm-2 control-label" popover-trigger="mouseenter" uib-popover="Select company name the application name should be associated with">Account</label>
             <div class="col-sm-10">
               <ui-select ng-model="model.account_id" theme="select2" ng-disabled="_loading" on-select="onAccountSelect($model)" style="min-width: 550px;" id="account_id">
                 <ui-select-match placeholder="Select Company">{{$select.selected.companyName}}</ui-select-match>
@@ -185,13 +185,13 @@
           <div class="form-group">
             <label for="domains_provisioned_list " popover-append-to-body="{{true}}" class="col-sm-2 control-label" popover-trigger="mouseenter" uib-popover="'Provisioned' domains which are registered in the 'Web' section of the portal and provide full middle-mile acceleration">Domains Provisioned List</label>
             <div class="col-sm-10">
-              <ui-select multiple tagging-tokens="SPACE|," theme="bootstrap" class="form-control" ng-if="domainList.length" ng-disabled="_loading" ng-model="configuration.domains_provisioned_list " id="domains_provisioned_list ">
+              <ui-select multiple tagging-tokens="SPACE|," theme="bootstrap" class="form-control" ng-if="getAccountDomainNameList(model.account_id).length>0" ng-disabled="_loading" ng-model="configuration.domains_provisioned_list" id="domains_provisioned_list ">
                 <ui-select-match placeholder="{{domainsListPlaceholder}}">{{$item}}</ui-select-match>
-                <ui-select-choices repeat="domain in domainList">
+                <ui-select-choices repeat="domain  in  getAccountDomainNameList(model.account_id)">
                   {{domain}}
                 </ui-select-choices>
               </ui-select>
-              <input type="text" class="form-control" placeholder="Please provision a domain first..." ng-if="!domainList.length" disabled>
+              <input type="text" class="form-control" placeholder="Please provision a domain first..." ng-if="getAccountDomainNameList(model.account_id).length == 0" disabled>
             </div>
           </div>
           <div class="form-group" ng-class="{ 'has-error': editForm.ratio.$invalid &&
