--- a/code/dev/parts/apps/edit.html
+++ b/code/dev/parts/apps/edit.html
@@ -56,7 +56,7 @@
             </div>
           </div>
           <div class="form-group" ng-if="auth.isReseller() || auth.isRevadmin()">
-            <label for="account_id" popover-append-to-body="{{true}}" class="col-sm-2 control-label" popover-trigger="mouseenter" uib-popover="Select company name the application name should be associated with">Account</label>
+            <label for="account_id" popover-append-to-body="{{true}}" class="col-sm-2 control-label" popover-trigger="mouseenter" uib-popover="Select company name the application name should be associated with">Company</label>
             <div class="col-sm-10">
               <ui-select ng-model="model.account_id" theme="select2" ng-disabled="_loading" on-select="onAccountSelect($model)" style="min-width: 550px;" id="account_id">
                 <ui-select-match placeholder="Select Company">{{$select.selected.companyName}}</ui-select-match>
@@ -204,7 +204,7 @@
           <div class="form-group" ng-class="{ 'has-error': editForm.comment.$invalid &&
                                       editForm.comment.$dirty }">
             <label for="comment" class="col-sm-2 control-label" popover-trigger="mouseenter" uib-popover="Comment">Comment</label>
-            <div class="col-sm-5">
+            <div class="col-sm-10">
               <textarea id="comment" class="form-control" name="comment" ng-model="model.comment" ng-disabled="_loading">
               </textarea>
             </div>
