--- a/code/parts/apps/edit.html
+++ b/code/parts/apps/edit.html
@@ -185,13 +185,13 @@
           <div class="form-group">
             <label for="domains_provisioned_list " popover-append-to-body="{{true}}" class="col-sm-2 control-label" popover-trigger="mouseenter" uib-popover="'Provisioned' domains which are registered in the 'Web' section of the portal and provide full middle-mile acceleration">Domains Provisioned List</label>
             <div class="col-sm-10">
-              <ui-select multiple tagging-tokens="SPACE|," theme="bootstrap" class="form-control" ng-if="domainList.length" ng-disabled="_loading" ng-model="configuration.domains_provisioned_list " id="domains_provisioned_list ">
+              <ui-select multiple tagging-tokens="SPACE|," theme="bootstrap" class="form-control" ng-if="getAccountDomainNameList(model.account_id).length>0" ng-disabled="_loading" ng-model="configuration.domains_provisioned_list" id="domains_provisioned_list ">
                 <ui-select-match placeholder="{{domainsListPlaceholder}}">{{$item}}</ui-select-match>
-                <ui-select-choices repeat="domain in domainList">
+                <ui-select-choices repeat="domain  in  getAccountDomainNameList(model.account_id)">
                   {{domain}}
                 </ui-select-choices>
               </ui-select>
-              <input type="text" class="form-control" placeholder="Please provision a domain first..." ng-if="!domainList.length" disabled>
+              <input type="text" class="form-control" placeholder="Please provision a domain first..." ng-if="getAccountDomainNameList(model.account_id).length == 0" disabled>
             </div>
           </div>
           <div class="form-group" ng-class="{ 'has-error': editForm.ratio.$invalid &&
@@ -204,7 +204,7 @@
           <div class="form-group" ng-class="{ 'has-error': editForm.comment.$invalid &&
                                       editForm.comment.$dirty }">
             <label for="comment" class="col-sm-2 control-label" popover-trigger="mouseenter" uib-popover="Comment">Comment</label>
-            <div class="col-sm-5">
+            <div class="col-sm-10">
               <textarea id="comment" class="form-control" name="comment" ng-model="model.comment" ng-disabled="_loading">
               </textarea>
             </div>
