Change title Company on Account

--- a/code/dev/parts/users/edit.html
+++ b/code/dev/parts/users/edit.html
@@ -96,7 +96,7 @@
                    popover-append-to-body="{{true}}"
                    class="col-sm-2 control-label"
                    popover-trigger="mouseenter"
-                   uib-popover="Select here companies the user should be associated with">Company</label>
+                   uib-popover="Select here accounts the user should be associated with">Account</label>
 
             <div class="col-sm-10">
               <select class="form-control"
