--- a/code/dev/parts/domains/new.html
+++ b/code/dev/parts/domains/new.html
@@ -50,11 +50,11 @@
                    popover-append-to-body="{{true}}"
                    class="col-sm-2 control-label"
                    popover-trigger="mouseenter"
-                   uib-popover="Select company name the domain should be associated with">Company</label>
+                   uib-popover="Select company name the domain should be associated with">Account</label>
 
             <div class="col-sm-10">
                <ui-select ng-model="model.account_id" theme="select2" ng-disabled="_loading" on-select="onAccountSelect($model)" style="min-width: 550px;" id="account_id" name="accountId">
-                <ui-select-match placeholder="Select Company">{{$select.selected.companyName}}</ui-select-match>
+                <ui-select-match placeholder="Select Account">{{$select.selected.companyName}}</ui-select-match>
                 <ui-select-choices repeat="item.id as item in companies | filter: {companyName: $select.search}">
                   <div ng-bind-html="item.companyName|highlight: $select.search"></div>
                 </ui-select-choices>
@@ -131,7 +131,7 @@
           <div class="form-group" ng-class="{ 'has-error': createForm.comment.$invalid &&
                                       editForm.comment.$dirty }">
             <label for="comment" class="col-sm-2 control-label" popover-trigger="mouseenter" uib-popover="Comment">Comment</label>
-            <div class="col-md-5">
+            <div class="col-md-10">
               <textarea id="comment" placeholder="Comment (max 300 symbol)" class="form-control" name="comment" ng-model="model.comment" ng-disabled="_loading">
               </textarea>
             </div>
