--- a/code/dev/parts/keys/dialog/edit.html
+++ b/code/dev/parts/keys/dialog/edit.html
@@ -48,7 +48,7 @@
                    style="width: 100%;">
           <ui-select-match placeholder="Select Account">{{$select.selected.companyName}}</ui-select-match>
           <ui-select-choices repeat="item.id as item in companies | filter: {companyName: $select.search}">
-            <small>{{item.companyName}}</small>
+            <small ng-bind-html="item.companyName|highlight: $select.search"> </small>
           </ui-select-choices>
         </ui-select>
       </div>
